--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -1,16 +1,29 @@
-<form class="form-signin">
-  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+<div class="form-signin">
+  <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
 
-  <label for="email" class="sr-only">Email address</label>
-  <input type="email" id="email" class="form-control" placeholder="Email address" required autofocus>
-  <label for="password" class="sr-only">Password</label>
-  <input type="password" id="password" class="form-control" placeholder="Password" required>
+  <div>
+    <h2 class="h2 mb-3"><%= IDP['sign_in'] %></h2>
 
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
+    <label for="email" class="sr-only">Email address</label>
+    <input type="email" id="email" class="form-control mb-3" placeholder="Email address" required autofocus>
+
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" id="password" class="form-control" placeholder="Password" required>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+
+    <%= link_to "Continue",
+        { controller: "mfa", action: "index", transaction_id: @transaction_id },
+        { class: "btn btn-lg btn-primary btn-block" } %>
   </div>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+  <div class="mt-5">
+    <h2 class="h2 mb-3"><%= IDP['sign_up'] %></h2>
+
+    <a class="btn btn-lg btn-primary btn-block" href="#">Create</a>
+  </div>
+</div>
