--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trust Framework IDP</title>
+    <title><%= IDP['title'] %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,7 +12,7 @@
     <meta name="AdsBot-Google" content="noindex" />
     <meta name="googlebot-news" content="nosnippet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="custom.css" rel="stylesheet">
+    <link href="../custom.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
