--- a/app/views/consent/index.html.erb
+++ b/app/views/consent/index.html.erb
@@ -1,23 +1,25 @@
-<div class="form-signin">
-  <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
+<body class="text-center">
+  <div class="form-signin">
+    <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
 
-  <div>
-    <h2 class="h2 mb-3">A service is requesting some of your information</h2>
+    <div>
+      <h2 class="h2 mb-3">A service is requesting some of your information</h2>
 
-    <p class="h6 mb-5"><%= IDP['consent'] %></p>
+      <p class="h6 mb-5"><%= IDP['consent'] %></p>
 
-    <ul class="list-group mb-5">
-      <li class="list-group-item">Full Name</li>
-      <li class="list-group-item">Date of birth</li>
-      <li class="list-group-item">Address</li>
-    </ul>
+      <ul class="list-group mb-5">
+        <li class="list-group-item">Full Name</li>
+        <li class="list-group-item">Date of birth</li>
+        <li class="list-group-item">Address</li>
+      </ul>
 
-    <p class="mb-5"><a href="#">Where did this data come from?</a></p>
+      <p class="mb-5"><a href="#">Where did this data come from?</a></p>
 
-    <%= link_to "Approve",
-        { controller: "loading", action: "index", transaction_id: @transaction_id },
-        { class: "btn btn-lg btn-primary btn-block" } %>
+      <%= link_to "Approve",
+          { controller: "loading", action: "index", transaction_id: @transaction_id },
+          { class: "btn btn-lg btn-primary btn-block" } %>
 
-    <a href="#" class="btn btn-lg btn-secondary btn-block">Cancel</a>
+      <a href="#" class="btn btn-lg btn-secondary btn-block">Cancel</a>
+    </div>
   </div>
-</div>
+</body>
