--- a/app/views/mfa/index.html.erb
+++ b/app/views/mfa/index.html.erb
@@ -1,14 +1,16 @@
-<div class="form-signin">
-  <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
+<body class="text-center">
+  <div class="form-signin">
+    <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
 
-  <div>
-    <h2 class="h2 mb-3">Enter the security code we sent you</h2>
+    <div>
+      <h2 class="h2 mb-3">Enter the security code we sent you</h2>
 
-    <label for="email" class="sr-only">Email address</label>
-    <input type="email" id="email" class="form-control mb-3" required autofocus>
+      <label for="email" class="sr-only">Email address</label>
+      <input type="email" id="email" class="form-control mb-3" required autofocus>
 
-    <%= link_to "Continue",
-        { controller: "consent", action: "index", transaction_id: @transaction_id },
-        { class: "btn btn-lg btn-primary btn-block mt-5" } %>
+      <%= link_to "Continue",
+          { controller: "consent", action: "index", transaction_id: @transaction_id },
+          { class: "btn btn-lg btn-primary btn-block mt-5" } %>
+    </div>
   </div>
-</div>
+</body>
