--- a/app/views/loading/index.html.erb
+++ b/app/views/loading/index.html.erb
@@ -1,11 +1,4 @@
-<script type="text/javascript">
-  function delayedRedirect() {
-      window.location = "<%= "/complete/" + @transaction_id %>"
-  }
-</script>
-
-
-<body class="text-center" onLoad="setTimeout('delayedRedirect()', 2000)">
+<body class="text-center">
   <div class="form-signin">
     <div class="mb-3">
       <div class="spinner-grow text-primary" role="status">
