Configure the IDP to take in a redirect path as a query parameters
- The IDP will be sending the response back to different paths depending on whether the RP was in the same scheme or a different scheme.

--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <%= link_to "Continue",
-          { controller: "mfa", action: "index", transaction_id: @transaction_id },
+          { controller: "mfa", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
           { class: "btn btn-lg btn-primary btn-block" } %>
     </div>
 
