--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <meta http-equiv="refresh" content="2" />
       <script type="text/javascript">
         function delayedRedirect() {
-          window.location = "<%= "/complete/" + @transaction_id %>"
+          window.location = "<%= "/complete/" + @transaction_id + "?redirect_path=" + @redirect_path %>"
         }
         setTimeout(delayedRedirect, 2000)
       </script>
