--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -1,31 +1,24 @@
-<body class="text-center">
-  <div class="form-signin">
-    <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
+<div class="form-signin text-center">
+  <h1 class="h1 mb-3" hidden><%= IDP['authentication_title'] %></h1>
 
-    <div>
-      <h2 class="h2 mb-3"><%= IDP['sign_in'] %></h2>
+  <div class="text-left">
+    <h2 class="h2 mb-4"><%= IDP['sign_in'] %></h2>
 
-      <label for="email" class="sr-only">Email address</label>
-      <input type="email" id="email" class="form-control mb-3" placeholder="Email address" required autofocus>
+    <label for="email" class="font-weight-bold">Email address or username</label>
+    <input type="email" id="email" class="form-control mb-4" placeholder="Email address" required autofocus>
 
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" id="password" class="form-control" placeholder="Password" required>
-
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-
-      <%= link_to "Continue",
-          { controller: "mfa", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
-          { class: "btn btn-lg btn-primary btn-block" } %>
-    </div>
-
-    <div class="mt-5">
-      <h2 class="h2 mb-3"><%= IDP['sign_up'] %></h2>
-
-      <a class="btn btn-lg btn-primary btn-block" href="#">Create</a>
-    </div>
+    <%= link_to "Continue",
+        { controller: "authentication", action: "password", transaction_id: @transaction_id, redirect_path: @redirect_path},
+        { class: "btn btn-lg btn-danger btn-block" } %>
   </div>
-</body>
+
+  <p class="mt-4"><a href="#" class="text-danger">I forgot my username</a></p>
+
+  <div class="dropdown-divider mt-5">
+  </div>
+
+  <div class="mt-4">
+    <p>Create new account?</p>
+    <a href="#" class="text-danger">Register here</a>
+  </div>
+</div>
