--- a/app/views/loading/index.html.erb
+++ b/app/views/loading/index.html.erb
@@ -143,6 +143,6 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <h2 class="h2 mb-3">Returning you to your chosen service</h2>
+    <h2 class="h2 mb-3">Loading . . .</h2>
   </div>
 </body>
