Add CSS styling for second IDP

--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="mt-4">
-    <p>Create new account?</p>
+    <p><%= IDP['sign_up'] %></p>
     <a href="#" class="text-danger">Register here</a>
   </div>
 </div>
