--- a/app/views/authentication/password.html.erb
+++ b/app/views/authentication/password.html.erb
@@ -7,9 +7,15 @@
     <label for="password" class="font-weight-bold">Fill in your password</label>
     <input type="password" id="password" class="form-control mb-4" placeholder="Password" required autofocus>
 
-    <%= link_to "Continue",
-        { controller: "mfa", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path },
-        { class: "btn btn-lg btn-danger btn-block" } %>
+    <% if ENV['IDP'] == 'idp1' %>
+      <%= link_to "Continue",
+          { controller: "mfa", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+          { class: "btn btn-lg btn-danger btn-block" } %>
+    <% else %>
+      <%= link_to "Continue",
+          { controller: "mfa", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+          { class: "btn btn-lg btn-warning btn-block" } %>
+    <% end %>
   </div>
 
   <p class="mt-4"><a href="#" class="text-danger">I forgot my password</a></p>
