--- a/app/views/consent/index.html.erb
+++ b/app/views/consent/index.html.erb
@@ -19,9 +19,15 @@
 
   <p class="mt-3 mb-5"><a href="#" class="text-danger">Where did this data come from?</a></p>
 
-  <%= link_to "Approve",
-      { controller: "loading", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path },
-      { class: "btn btn-lg btn-danger btn-block" } %>
+  <% if ENV['IDP'] == 'idp1' %>
+    <%= link_to "Approve",
+        { controller: "loading", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+        { class: "btn btn-lg btn-danger btn-block" } %>
+  <% else %>
+    <%= link_to "Approve",
+        { controller: "loading", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+        { class: "btn btn-lg btn-warning btn-block" } %>
+  <% end %>
   <a href="#" class="btn btn-lg btn-secondary btn-block">Cancel</a>
 </div>
 
