--- a/app/views/mfa/index.html.erb
+++ b/app/views/mfa/index.html.erb
@@ -13,9 +13,15 @@
     <label for="mfa" class="font-weight-bold">Enter the code sent to your mobile phone</label>
     <input type="mfa" id="mfa" class="form-control mb-4" placeholder="Code" required autofocus>
 
-    <%= link_to "Continue",
-        { controller: "consent", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path },
-        { class: "btn btn-lg btn-danger btn-block" } %>
+    <% if ENV['IDP'] == 'idp1' %>
+      <%= link_to "Continue",
+          { controller: "consent", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+          { class: "btn btn-lg btn-danger btn-block" } %>
+    <% else %>
+      <%= link_to "Continue",
+          { controller: "consent", action: "index", transaction_id: @transaction_id, redirect_path: @redirect_path},
+          { class: "btn btn-lg btn-warning btn-block" } %>
+    <% end %>
   </div>
 
   <p class="mt-4"><a href="#" class="text-danger">I didn't get my code</a></p>
